fix: add spacing in the image of blog detail page

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -12,5 +12,5 @@
 
 .blog-content img {
     max-width: 100%;
-    margin: 2em 0 2em 0
+    margin: 2em 0 2em 0;
 }
